# file_transfer

./: Makefile  README.md  job_schdule.md
.devcontainer/: devcontainer.json
src/: app.py  main.py  pyproject.toml
src/configs/: settings.py
src/resolvers/: resolve_file_upload.py  resolve_redis.py
src/routers/: file.py
src/test/: test_request.py  test_resolve_redis.py
src/utils/: logging_utils.py  route_utils.py
